<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="activity_wiredlessand_wired_setting_show1">\"Small window\" projects \"Big screen\", mobile phone handles multi-tasks at the same time</string>
    <string name="activity_wiredlessand_wired_setting_show2">Mobile phone becomes \"Handle\", watching the big screen to play games</string>
    <string name="agree">Agree</string>
    <string name="app_name">Redmagic Cast</string>
    <string name="bandwidth_high">Strong</string>
    <string name="bandwidth_mid">Medium</string>
    <string name="bandwidth_poor">Weak</string>
    <string name="browsedevice_link_status_ing">Please make sure that the devices at both ends are connected to the same LAN May try %1$s switch networks</string>
    <string name="cannot_connect">Unable to connect. Please confirm device</string>
    <string name="change_wifi">Projection screen prompts</string>
    <string name="change_wifi_continue">Continue to use</string>
    <string name="change_wifi_tips">To ensure projection screen quality, it’s suggestion to switch to Wi-Fi of 5G</string>
    <string name="change_wifi_to_settings">WLAN Setting</string>
    <string name="choose_device">Select the device for projection screen</string>
    <string name="choose_device_computer">Project screen to PC</string>
    <string name="choose_device_computer_linked">Stop</string>
    <string name="choose_device_tv">Project screen to TV</string>
    <string name="choose_device_tv_linked">Stop</string>
    <string name="choose_sound">Audio output</string>
    <string name="choose_sound_output_message">When the mobile phone turns on the microphone or we puts on the headset, whether the screen mirroring terminal will always output sound or not?</string>
    <string name="connect_blacklist">Connection blacklist</string>
    <string name="connect_fail">Connection failed</string>
    <string name="connect_reject">Connection refused</string>
    <string name="connect_timeout">Connection timeout</string>
    <string name="cta_message_1">Welcome to use Screencast search. In order to provide you with better service, the following permissions are required during use:</string>
    <string name="cta_message_2">"• Recording: You need to obtain this permission to cast sound to other terminals. 
• Camera: Scan the code when creating the link to obtain this permission. 
• Networking and device ID: the software needs to obtain this permission when performing security verification on the server side."</string>
    <string name="cta_message_3">Clicking \"Agree\" means that you agree to the above content and <a href="https://account.nubia.com/res/html/screenprojection_privacy.html">Screencast privacy policy</a>.</string>
    <string name="cta_title">“Service Description”</string>
    <string name="device_list">Select devices</string>
    <string name="device_searching">Searching surrounding devices</string>
    <string name="disconnect">Disconnected</string>
    <string name="floating_permission">Need to activate the floating window permission</string>
    <string name="floating_permission_negative">Cancel</string>
    <string name="floating_permission_positive">Go to settings</string>
    <string name="floating_permission_tips">When using the projection screen, need to activate the permission button that allows it to be displayed on the upper layer of other apps</string>
    <string name="hdmi_list_empty_tip">Please insert DP/HDMI cable to connect for wired screen mirroring</string>
    <string name="help_content_1">"Step 1: Download Lebo projection screen client from computer end. 
Step 2: make sure that the mobile phone end and the target device are connected to the same LAN. 
Step 3: open the QR code of Lebo projection screen client from computer end and scan the QR code to connect with mobile phone end."</string>
    <string name="help_content_2">"Step 1: Make sure that the mobile phone end and the target device are connected to the same LAN. 
Step 2: Select “project screen to TV” from mobile phone end and select the device for projection screen in the list of large-screen devices among search results and project screen."</string>
    <string name="help_content_3">Some large-screen devices cannot be searched. You can try to download and open the Lebo projection screen client on the TV to complete the screen</string>
    <string name="help_content_4">"Under the condition of good network conditions, the following factors may affect the quality of the screen projection: 
1. Both devices are not connected to the 5G Wi-Fi hotspot; 
2. When the local area network connected by both devices has interference, if multiple devices are connected to the same local area network, with obstacles such as walls; 
3. The screen refresh rates of the two devices are not the same."</string>
    <string name="help_content_5">When on live, it is recommended to use a 3.5mm audio cable to connect the mobile phone and the computer to transmit sound. At the same time, select \"None\" for \"Screen projection sound source\" to ensure that the sound is synchronized with the mobile phone screen.</string>
    <string name="help_title_1">Project screen to PC</string>
    <string name="help_title_2">Project screen to TV</string>
    <string name="help_title_3">Screen projection freezes, delays?</string>
    <string name="home_activity_mirrot_playing">Connected to</string>
    <string name="home_activity_mirrotpc">Mobile games cast PC, live broadcast more enjoyable</string>
    <string name="home_activity_mirrottv">Mobile games cast TV, big screen is smoother</string>
    <string name="home_auto_quality_tips">Automatically adjust the screen definition according to the network quality</string>
    <string name="home_auto_quality_title">Automatic adjustment</string>
    <string name="home_back">Redmagic Cast</string>
    <string name="home_cancel">Cancel</string>
    <string name="home_floating_window_tips">When wireless screen mirroring, current LAN connection status will be real-time displayed.</string>
    <string name="home_floating_window_title">Display of screen projection status</string>
    <string name="home_help">Help</string>
    <string name="home_private_mode_tips">When wireless screen mirroring, banner notifications, incoming calls and other information will not be displayed on the target device screen.</string>
    <string name="home_private_mode_tips_wired">When wired screen mirroring, banner screen notifications, incoming calls and other information will not be displayed on the target device screen.</string>
    <string name="home_private_mode_title">Privacy Mode</string>
    <string name="home_quality">Quality</string>
    <string name="home_sound_source">Sound Sources</string>
    <string name="initsdk_failed">Initialization failed, please check wifi connection</string>
    <string name="jump_to_settings">Go to setting</string>
    <string name="mirror_link_status_ing">Connecting...</string>
    <string name="mirror_link_status_lastlinkdevice">Last connection</string>
    <string name="no">No</string>
    <string name="no_device_found">No available devices</string>
    <string name="no_device_found_tip">You can try to download and open the Lebo projection screen client on the TV.</string>
    <string name="no_wanted_device_tip">If there is no target device, you can try to download on TV and open the Lebo projection screen client</string>
    <string name="not_change_while_mirroring">Please use it before the screen</string>
    <string name="nubia_capital_off">OFF</string>
    <string name="nubia_capital_on">ON</string>
    <string name="pin_disconnect">Pin code disconnected</string>
    <string name="privacy_comfirm">Confirm to enable</string>
    <string name="privacy_message">Projection screen has been connected. Do you want to enable privacy mode?</string>
    <string name="privacy_title">Privacy Mode</string>
    <string name="quality_high">HD</string>
    <string name="quality_low">Fluent</string>
    <string name="quality_suggestion_confirm">Confirm to use</string>
    <string name="quality_suggestion_tips">Current network status is poor. To ensure the effect of screen projection, it is recommended to use adaptive mode for the screen projection quality.</string>
    <string name="quality_suggestion_title">Screen projection suggestion</string>
    <string name="req_permission_fail">Authorization failed</string>
    <string name="request_permission">Request permission</string>
    <string name="request_permission_tips">Go to setting interface and grant permission required by application</string>
    <string name="research">Search again</string>
    <string name="result_mirror_fail">Failed.</string>
    <string name="result_mirror_stop">Stopped</string>
    <string name="screen_projection_quality_auto">Extremely clear</string>
    <string name="screen_projection_quality_high">HD</string>
    <string name="screen_projection_quality_host">UHD</string>
    <string name="screen_projection_quality_low">LD</string>
    <string name="screen_projection_quality_normal">SD</string>
    <string name="sound_source_mike">Microphone</string>
    <string name="sound_source_none">None</string>
    <string name="sound_source_none_tips">(When on live, 3.5mm audio cable is recommended)</string>
    <string name="sound_source_system">System Sound</string>
    <string name="sound_source_system_mike">System Sound and Microphone</string>
    <string name="wifi_open">Enable Wi-Fi</string>
    <string name="wifi_open_text">Enable immediately</string>
    <string name="wifi_open_tips">Both devices on the screen projection use 5G band Wi-Fi network for better quality.</string>
    <string name="wired_sound_output_never_ask">No more reminders</string>
    <string name="wired_sound_output_title">Screen mirroring terminal outputs sound.</string>
    <string name="wireless_screen_projection">Wireless Projection</string>
    <string name="yes">Yes</string>
    <string name="home_dts">Projection sound effect</string>
    <string name="scan_notes_nubia_1">1.Download the Red Magic Projection Client on the computer</string>
    <string name="scan_notes_nubia_2">2.Both devices are connected to the same LAN</string>
    <string name="scan_notes_nubia_3">3.Open the QR code of the Red Magic projection client, scan the code to connect</string>
    <string name="scan_notes_nubia_4">Reminder: It also supports LeboCast’s screen projection client</string>
    <string name="scan_notes_nubia_scandetail">Help details</string>
    <string name="sound_dts_defualt">External sound effect</string>
    <string name="sound_dts_earphone">Earphone sound effect</string>
    <string name="sound_dts_step_up">Shot enhancement</string>
</resources>