<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/corner_dialog_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="14.0dip" android:textColor="@color/textColor2nd" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="15.0dip" android:text="@string/home_quality" />
    <cn.nubia.touping.View.SingleChoiceItem android:id="@id/screen_projection_quality_auto" android:layout_width="fill_parent" android:layout_height="56.0dip" app:item_text="@string/screen_projection_quality_auto" />
    <cn.nubia.touping.View.SingleChoiceItem android:id="@id/screen_projection_quality_host" android:layout_width="fill_parent" android:layout_height="56.0dip" app:item_text="@string/screen_projection_quality_host" />
    <cn.nubia.touping.View.SingleChoiceItem android:id="@id/screen_projection_quality_high" android:layout_width="fill_parent" android:layout_height="56.0dip" app:item_text="@string/screen_projection_quality_high" />
    <cn.nubia.touping.View.SingleChoiceItem android:id="@id/screen_projection_quality_normal" android:layout_width="fill_parent" android:layout_height="56.0dip" app:item_text="@string/screen_projection_quality_normal" />
    <cn.nubia.touping.View.SingleChoiceItem android:id="@id/screen_projection_quality_low" android:layout_width="fill_parent" android:layout_height="56.0dip" app:item_text="@string/screen_projection_quality_low" />
    <Button android:textSize="@dimen/text_size_normal" android:textColor="@color/nubia_button_text_color" android:layout_gravity="center" android:id="@id/screen_projection_quality_cancel" android:background="@drawable/nubia_btn_default_material" android:layout_width="216.0dip" android:layout_height="40.0dip" android:layout_marginTop="18.0dip" android:layout_marginBottom="30.0dip" android:text="@string/home_cancel" />
</LinearLayout>