<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_large" android:textColor="@color/textColorPrimary" android:gravity="center_vertical" android:id="@id/settings_back" android:layout_width="wrap_content" android:layout_height="64.0dip" android:text="@string/wireless_screen_projection" android:drawablePadding="2.0dip" android:drawableStart="@drawable/scan_back" android:fontFamily="nubiafont-medium" android:layout_marginStart="14.0dip" />
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/settings_private_mode" android:layout_width="fill_parent" android:layout_height="84.0dip" android:paddingStart="20.0dip" android:paddingEnd="20.0dip">
                <cn.nubia.touping.View.NubiaSwitch android:id="@id/settings_private_mode_switcher" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" style="@style/NubiaSwitch" />
                <LinearLayout android:gravity="start|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="15.0dip" android:layout_toStartOf="@id/settings_private_mode_switcher">
                    <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/textColorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_private_mode_title" />
                    <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/textColor2nd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/home_private_mode_tips" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout android:id="@id/settings_floating_window" android:layout_width="fill_parent" android:layout_height="84.0dip" android:paddingStart="20.0dip" android:paddingEnd="20.0dip">
                <cn.nubia.touping.View.NubiaSwitch android:id="@id/settings_floating_window_switcher" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" style="@style/NubiaSwitch" />
                <LinearLayout android:gravity="start|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="15.0dip" android:layout_toStartOf="@id/settings_floating_window_switcher">
                    <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/textColorPrimary" android:id="@id/settings_floating_window_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_floating_window_title" />
                    <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/textColor2nd" android:id="@id/settings_floating_window_title2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/home_floating_window_tips" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout android:id="@id/settings_quality" android:layout_width="fill_parent" android:layout_height="56.0dip" android:paddingStart="20.0dip" android:paddingEnd="20.0dip">
                <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/textColorPrimary" android:id="@id/settings_quality_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_quality" android:layout_centerVertical="true" />
                <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/textColor2nd" android:gravity="center" android:id="@id/settings_quality_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/screen_projection_quality_auto" android:layout_centerVertical="true" android:drawableEnd="@drawable/jump" android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/settings_sound_source" android:layout_width="fill_parent" android:layout_height="56.0dip" android:paddingStart="20.0dip" android:paddingEnd="20.0dip">
                <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/textColorPrimary" android:id="@id/settings_sound_source_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_sound_source" android:layout_centerVertical="true" />
                <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/textColor2nd" android:gravity="center" android:id="@id/settings_sound_source_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sound_source_mike" android:layout_centerVertical="true" android:drawableEnd="@drawable/jump" android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/settings_dts" android:layout_width="fill_parent" android:layout_height="56.0dip" android:paddingStart="20.0dip" android:paddingEnd="20.0dip">
                <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/textColorPrimary" android:id="@id/settings_dts_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_dts" android:layout_centerVertical="true" />
                <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/textColor2nd" android:gravity="center" android:id="@id/settings_dts_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sound_dts_defualt" android:layout_centerVertical="true" android:drawableEnd="@drawable/jump" android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>